[project]
name = "create-view"
version = "0.1.0"
description = ""
authors = [
    {name = "skygambaroe",email = "enrico.gambaro.nttdata@skytv.it"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "create_view", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
estrai_query = "create_view.main:main"